--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ html, body {
     height: 100%;
     margin: 0%;
     background-color:rgba(255, 105, 180, 0.288);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
 }
 
 #container {
@@ -9,9 +13,6 @@ html, body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100%;
-    width: 100%;
-    border-style: solid;
 }
 
 .btn {
